Change the format somewhat to allow for reporting of multiple releases, and add links to the archived mail messages for each report.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -7,292 +7,421 @@
 <body>
 <h1 align="center">Build status for GCC 3.0</h1>
 
-<p>This list covers GCC 3.0 and all 3.0.x releases.</p>
+<p>This list summarizes build reports for GCC 3.0*, with links to the
+archived mail messages that reported the builds.</p>
 
 <table>
 
 <tr>
 <td>alpha-dec-osf4.0d</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
+</tr>
 
 <tr>
 <td>alpha-dec-osf4.0f</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00536.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>alpha-dec-osf5.1</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00421.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>alpha-pld-linux-gnu</td>
-<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
+<td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00161.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>alphaev5-dec-osf4.0e</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00224.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>alphaev5-dec-osf5.1</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg01289.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>alphaev56-dec-osf4.0b</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00481.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>alphaev56-unknown-linux-gnu</td>
-<td>Successful (Red Hat 6.2)</td>
+<td>Red Hat 6.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01020.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>alphaev67-dec-osf5.1</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00432.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>alphaev67-unknown-linux-gnu</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00230.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>hppa1.1-hp-hpux10.10</td>
-<td>Successful (except fastjar)</td>
+<td>&nbsp;</td>
+<td>Successful (except fastjar):
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00231.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>hppa1.1-hp-hpux10.20</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00881.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>hppa1.1-hp-hpux11.00</td>
-<td>Successful (C and C++)</td>
+<td>&nbsp;</td>
+<td>Successful (C and C++):
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00877.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>hppa2.0-hp-hpux10.20</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00390.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>hppa2.0w-hp-hpux11.00</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>hppa64-hp-hpux11.00</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00934.html">3.0.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg01633.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>i386-pc-sco3.2v5.0.4</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00175.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>i386-pc-solaris2.6</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00734.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i386-pc-solaris2.8</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00350.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>i386-pld-linux-gnu</td>
-<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
+<td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00161.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i386-redhat-linux-gnu</td>
-<td>Successful (WinLinux 2001)</td>
+<td>WinLinux 2001</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00742.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i386-unknown-freebsd4.2</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00949.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>i386-unknown-freebsd4.3</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful: 3.0</td>
 </tr>
 
 <tr>
 <td>i586-pc-cygwin</td>
-<td>Successful</td>
+<td>Cygwin 1.3.2, Win98</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00026.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00152.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
-<td>Successful (Caldera OpenLinux 2.2)</td>
+<td>Caldera OpenLinux 2.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00805.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i586-pc-linux-gnu (k6)</td>
-<td>Successful (Red Hat 7.0, glibc 2.2.4)</td>
+<td>Red Hat 7.0, glibc 2.2.4</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00214.html">3.0.2</a>;
+Unsuccessful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00363.html">3.0 and 3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i586-pld-linux-gnu</td>
-<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
+<td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00161.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-cygwin</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00314.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Caldera 2.4, glibc 2.1.2)</td>
+<td>Caldera 2.4, glibc 2.1.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00863.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Debian 2.2, glibc 2.1.3)</td>
+<td>Debian 2.2, glibc 2.1.3</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00206.html">3.0.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00206.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Mandrake 8.0, glibc 2.2.4)</td>
+<td>Mandrake 8.0, glibc 2.2.4</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00895.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Mandrake 8.1, glibc 2.2.4)</td>
+<td>Mandrake 8.1, glibc 2.2.4</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00843.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Red Hat 6.2)</td>
+<td>Red Hat 6.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Red Hat 7.1, glibc 2.2, kernel 2.4.10)</td>
+<td>Red Hat 7.1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Red Hat 7.1, glibc 2.2.2, kernel 2.4.9-12)</td>
+<td>Red Hat 7.1, glibc 2.2.2, kernel 2.4.9-12</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00389.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Red Hat 7.2, glibc 2.2.4, kernel 2.4.13)</td>
+<td>Red Hat 7.1, glibc 2.2, kernel 2.4.10</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg01588.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Slackware 8.0, glibc 2.2.3)</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.13</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg01528.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (SuSE 6.2, glibc 2.1.1, kernel 2.2.19)</td>
+<td>Slackware 8.0, glibc 2.2.3</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg01189.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (SuSE 7.0, glibc 2.1)</td>
+<td>SuSE 6.2, glibc 2.1.1, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00016.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (SuSE 7.2, glibc 2.2)</td>
+<td>SuSE 7.0, glibc 2.1, kernel 2.2.16</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00148.html">3.0.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.2, glibc 2.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg01481.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>i686-pld-linux-gnu</td>
-<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
+<td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00161.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>ia64-unknown-linux</td>
-<td>Successful (Red Hat 7.1.94, glibc 2.2.4)</td>
+<td>Red Hat 7.1.94, glibc 2.2.4</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00863.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>mips-sgi-irix6.2</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>mips-sgi-irix6.5</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00973.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>powerpc-ibm-aix4.2.1.0</td>
-<td>Successful (C and C++)</td>
+<td>&nbsp;</td>
+<td>Successful (C and C++):
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00127.html">3.0.2</a></td>
 </tr>
 
 <tr>
 <td>powerpc-ibm-aix4.3.2.0</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>powerpc-ibm-aix4.3.3.0</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00647.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-06/msg01914.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>s390-linux-gnu</td>
-<td>Successful (beginning with 3.0.1; not supported in 3.0)</td>
+<td>Supported beginning with 3.0.1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01139.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>sparc-linux-gnu</td>
-<td>Successful (Debian)</td>
+<td>Debian</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01349.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>sparc-pld-linux-gnu</td>
-<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
+<td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00161.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>sparc-sun-solaris2.5.1</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00760.html">3.0</a></td>
 </tr>
 
 <tr>
 <td>sparc-sun-solaris2.6</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00842.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>sparc-sun-solaris2.7</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00973.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>sparc-sun-solaris2.8</td>
-<td>Successful</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00941.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01021.html">3.0.1</a></td>
 </tr>
 
 <tr>
 <td>sparc-sun-solaris2.* (64 bits)</td>
 <td>Not supported</td>
+<td>&nbsp;</td>
 </tr>
 
 </table>
