"Switches" anonymous CVS services from gcc.gnu.org to subversions.gnu.org, simplify the page a bit, and improve markup.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -31,16 +31,14 @@ CVS versions up to 1.10.4 have "Y2K problems".)
 GCC sources with the following sequence of commands:
 
 <p>Set CVSROOT in your environment to
-
-<blockquote><code>:pserver:anoncvs@gcc.gnu.org:/cvs/gcc</code></blockquote>
-
-<p>Or alternately add 
-<blockquote><code>-d :pserver:anoncvs@gcc.gnu.org:/cvs/gcc</code></blockquote>
+<code>:pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</blockquote>.
+Alternately add 
+<code>-d :pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</blockquote>
 in the CVS commands below (place it immediately after <code>cvs</code>,
-i.e., before any other CVS arguments).
+before any other arguments).</p>
 
-Issue the command <code>cvs login</code>.  You will be prompted for
-a password; reply with <code>anoncvs</code>.
+<p>Issue the command <code>cvs login</code>.  You will be prompted for
+a password; reply with the empty string.</p>
 
 <p>Issue the command 
 <blockquote><code>cvs -z 9 co gcc</code></blockquote>
