--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -31,9 +31,9 @@ CVS versions up to 1.10.4 have "Y2K problems".)
 GCC sources with the following sequence of commands:
 
 <p>Set CVSROOT in your environment to
-<code>:pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</blockquote>.
+<code>:pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</code>.
 Alternately add 
-<code>-d :pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</blockquote>
+<code>-d :pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</code>
 in the CVS commands below (place it immediately after <code>cvs</code>,
 before any other arguments).</p>
 
