--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -8,9 +8,13 @@
 
 <h1 align="center">GCC mirror sites</h1>
 
-<p>These sites mirror the GCC ftp directory directly.  The official
-gcc.gnu.org server is in California in the US.  Please let us know
-if you are mirroring the GCC pages so we can note it here!</p>
+<p>These sites mirror the GCC FTP site directly.  The official
+gcc.gnu.org server is in California.  Please let us know
+if you are mirroring the GCC FTP site so we can note it here!</p>
+
+<p>Our releases are also available on the
+<a href="http://www.gnu.org/order/ftp.html">GNU FTP server and its mirror
+sites</a>.</p>
 
 <p>If you want to mirror the whole GCC CVS repository, ask about 
 <a href="cvsup.html">CVSup access</a>.</p>
