Simplify and compress.

--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -9,13 +9,12 @@
 <h1 align="center">GCC Snapshots</h1>
 
 <p>We recommend that you use <a href="cvs.html">CVS to access our
-current development sources</a>, although we also make regular
-snapshots available for FTP download.</p>
+current development sources</a>.
 
-<p> We make snapshots of the GCC sources about once a week; there is no
-predetermined schedule.  These snapshots are intended to give everyone
-access to work in progress.  Any given snapshot may generate incorrect code
-or even fail to build.</p>
+<p>We also make regular snapshots available for FTP download about once
+a week. These snapshots are intended to give everyone access to work in
+progress.  Any given snapshot may generate incorrect code or even fail to
+build.</p>
 
 <p>If you plan on downloading and using snapshots, we highly recommend you
 subscribe to the GCC mailing lists.  See <a href="lists.html">
