--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -9,7 +9,7 @@
 <h1 align="center">GCC Snapshots</h1>
 
 <p>We recommend that you use <a href="cvs.html">CVS to access our
-current development sources</a>.
+current development sources</a>.</p>
 
 <p>We also make regular snapshots available for FTP download about once
 a week. These snapshots are intended to give everyone access to work in
