Tweak and simplify a bit.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -8,9 +8,9 @@
 
 <h1 align="center">GCC mirror sites</h1>
 
-<p>These sites mirror the GCC FTP site directly.  The official
-gcc.gnu.org server is in California.  Please let us know
-if you are mirroring the GCC FTP site so we can note it here!</p>
+<p>These sites mirror the gcc.gnu.org FTP site (California, USA) directly.
+Please let us know if you are mirroring our FTP site so we can note it
+here!</p>
 
 <p>Our releases are also available on the
 <a href="http://www.gnu.org/order/ftp.html">GNU FTP server and its mirror
