--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -9,9 +9,8 @@
 <h1 align="center">GCC Releases</h1>
 
 <p>Apart from providing our <a href="cvs.html">sources by means of CVS</a>
-we also make source code for our releases available for FTP download.</p>
-
-<p>Please use our <a href="mirrors.html">mirror sites</a>.</p>
+we also make source code for our releases available for FTP download from
+our <a href="mirrors.html">mirror sites</a>.</p>
 
 <p><em>Important: because these are source releases, they will be
 of little use to you if you do not already have a C compiler on your
