--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -11,7 +11,8 @@
 <p>We recommend that you use <a href="cvs.html">CVS to access our
 current development sources</a>.</p>
 
-<p>We also make regular snapshots available for FTP download about once
+<p>We also make regular snapshots available for FTP download from our
+<a href="mirrors.html">mirror sites</a> about once
 a week. These snapshots are intended to give everyone access to work in
 progress.  Any given snapshot may generate incorrect code or even fail to
 build.</p>
@@ -33,8 +34,6 @@ that autoconf, bison et al aren't needed. This is documented in
 comments in contrib/gcc_update. <BR> The file .brik provides a list of
 checksums of files in the snapshot, that may be checked using<BR>
 brik -C &lt; .brik</p>
-
-<p>Please use our <a href="mirrors.html">mirror sites</a>.</p>
 
 <p>In addition, some of our contributors also provide pre-built binaries
 of our current development sources on a regular basis:</p>
