--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -16,9 +16,14 @@ available read-only to the public at large.
 <p>That way you can pick up any version (including releases) of GCC that
 is in our repository or our <a href="#wwwdocs">web pages</a>.
 
-<p>In addition you can 
-<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/">browse our CVS
-history online</a>.
+<p>In addition, you can browse our CVS history online at
+
+<ul>
+  <li><a href="http://subversions.gnu.org/cgi-bin/viewcvs/gcc/">subversions.gnu.org</a>
+      using viewcvs, or</li>
+  <li><a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/">gcc.gnu.org</a>
+      using cvsweb.</li>
+</ul>
 
 
 <h2>Using the CVS repository</h2>
