* index.html: Mention Hans' patch.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,14 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>December 14, 2001</b>
+</td><td>
+Hans Boehm has checked in changes which once again allow gcj and
+libgcj to work on IA-64.  His changes also speed up allocation of
+objects which don't require a finalizer.
+</td></tr>
+
+<tr><td valign="top">
 <b>November 5, 2001</b>
 </td><td>
 Tom Tromey contributed a bytecode verifier.  It hasn't yet been
