* download.html: Remove CVS instructions, point to GCC CVS page 	instead.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -71,28 +71,13 @@ http://gcc.gnu.org/snapshots.html</a>.
 
 <h3><a name=cvs>cvs</a></h3> 
 
-The easiest way to get GCJ is to check it out from the GCC cvs
-repository. Here's how perform an anonymous <A
-HREF="http://gcc.gnu.org/cvs.html">read-only</A> CVS access:
+The easiest way to get GCJ (and keep it up to date) is to check it out from 
+the GCC cvs repository. Follow the links below for instructions: 
 
-<small>
-<pre>
-cvs -d:pserver:anoncvs@gcc.gnu.org:/cvs/gcc login
-  (password is ``anoncvs'')
-cvs -z9 -d:pserver:anoncvs@gcc.gnu.org:/cvs/gcc co gcc
-</pre>
-</small>
-<p>
-
-Here's how to perform a <A HREF="http://gcc.gnu.org/cvswrite.html">
-read-write</A> CVS access, provided that you're were given a account
-on <tt>gcc.gnu.org</tt>:
-
-<small>
-<pre>
-cvs -z 9 -d :ext:username@gcc.gnu.org:/cvs/gcc co gcc
-</pre>
-</small>
+<ul>
+<li><A HREF="http://gcc.gnu.org/cvs.html">read-only (anonymous) CVS access</A></li>
+<li><A HREF="http://gcc.gnu.org/cvswrite.html">read-write CVS access</A></li>
+</ul>
 
 <h3>cvsweb</h3>
 
