Add project idea in the Format Checking section, based on PR c/5127.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -483,6 +483,14 @@ such as OS kernels and parts of GCC to tell GCC about additional
 format conversion characters recognised by their format
 functions.</li>
 
+<li><code>fopen</code>, <code>freopen</code>: warning for the
+incorrect format of the mode parameter, see <a 
+href="http://gcc.gnu.org/ml/gcc-bugs/2001-12/msg00649.html">PR
+c/5127</a>.  Some ideas for how to implement such a warning
+were discussed <a 
+href="http://gcc.gnu.org/ml/gcc-bugs/2001-12/msg00651.html">here</a>.
+</li>
+
 </ul>
 
 <h2><a name="improve_the_installation_procedure">Improve the installation procedure</a></h2>
