Update Mitsubishi URLs.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -107,7 +107,9 @@ tahoe. These are listed here just for completeness.
    <br><a href="http://developer.axis.com/">Site with CPU documentation</a>
 
  <li>d30v
-  <br>Manufacturer: <a href="http://www.mitsubishi.com">Mitsubishi</a>
+  <br>Manufacturer: <a href="http://www.mitsubishichips.com/">Mitsubishi</a>
+  <br>There is no longer any reference to this chip anywhere on the 
+      manufacturer's web site; it may be dead.
   <br>GDB includes a simulator.
 
  <li>dsp16xx
@@ -162,7 +164,7 @@ tahoe. These are listed here just for completeness.
    <br>GDB includes a simulator.
 
  <li>m32r
-  <br>Manufacturer: <a href="http://www.mitsubishi.com">Mitsubishi</a>
+  <br>Manufacturer: <a href="http://www.mitsubishichips.com/">Mitsubishi</a>
   <br><a href="http://www.mitsubishichips.com/products/mcu/products/32-bit/index.html">M32R/D Site</a>
   <br>GDB includes a CGEN generated simulator.
 
