Change 3.0* to 3.0.x in response to a user request.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -7,7 +7,7 @@
 <body>
 <h1 align="center">Build status for GCC 3.0</h1>
 
-<p>This list summarizes build reports for GCC 3.0*, with links to the
+<p>This list summarizes build reports for GCC 3.0.x, with links to the
 archived mail messages that reported the builds.</p>
 
 <table>
