Add alpha-dec-osf4.0f for 3.0.2.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -23,7 +23,9 @@ archived mail messages that reported the builds.</p>
 <td>alpha-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00536.html">3.0.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00536.html">3.0.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00880.html">3.0.2</a>
+</td>
 </tr>
 
 <tr>
