Update onlinedocs links.  Link to internals manual.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -107,40 +107,43 @@ existing release.</p>
 
 <ul>
   <li><a href="http://gcc.gnu.org/install/">GCC Installation Instructions</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcc.html">GCC Manual</a> (<a
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcc/">GCC Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc.ps.gz">also in
          PostScript</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/g77.html">G77 Manual</a> (<a
+  <li><a href="http://gcc.gnu.org/onlinedocs/gccint/">GCC Internals Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gccint.ps.gz">also in
+         PostScript</a>)</li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/g77/">G77 Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/g77.ps.gz">also in
          PostScript</a>)</li>
   <ul> 
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a></li>
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a></li>
   </ul>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcj.html">GCJ Manual</a> (<a
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcj/">GCJ Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcj.ps.gz">also in
          PostScript</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/cpp.html">CPP Manual</a> (<a
+  <li><a href="http://gcc.gnu.org/onlinedocs/cpp/">CPP Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/cpp.ps.gz">also in
          PostScript</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/cppinternals.html">CPP
+  <li><a href="http://gcc.gnu.org/onlinedocs/cppinternals/">CPP
        Internals Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/cppinternals.ps.gz">also in
          PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">libstdc++-v3 Documentation</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/porting.html">libstdc++-v3
+  <li><a href="http://gcc.gnu.org/onlinedocs/porting/">libstdc++-v3
        Porting Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/porting.ps.gz">also in
          PostScript</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/chill.html">Chill
+  <li><a href="http://gcc.gnu.org/onlinedocs/chill/">Chill
       Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/chill.ps.gz">also in
          PostScript</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/libiberty.html">Libiberty
+  <li><a href="http://gcc.gnu.org/onlinedocs/libiberty/">Libiberty
       Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/libiberty.ps.gz">also in
          PostScript</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gnat-style.html">GNAT
+  <li><a href="http://gcc.gnu.org/onlinedocs/gnat-style/">GNAT
       Coding Style Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gnat-style.ps.gz">also in
          PostScript</a>)</li>
