--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -27,10 +27,11 @@ suite.  You should also familiarize yourself with the
 <a href="../contribute.html">requirements for contributions</a> to GCC.</p>
 
 <p>Many of these projects will require at least a reading knowledge of
-GCC's intermediate language, <a href="http://gcc.gnu.org/onlinedocs/gcc_19.html">RTL</a>.
+GCC's intermediate language,
+<a href="http://gcc.gnu.org/onlinedocs/gccint/RTL.html">RTL</a>.
 It may help to understand the higher-level <code>tree</code> structure as
 well.  Unfortunately, for this we only have an <a
-href="http://gcc.gnu.org/onlinedocs/gcc_18.html">incomplete, C/C++ specific manual</a>.</p>
+href="http://gcc.gnu.org/onlinedocs/gccint/Trees.html">incomplete, C/C++ specific manual</a>.</p>
 
 <h2>Bug patrol</h2>
 
@@ -430,8 +431,8 @@ There is also work to be done in cleaning up the places where the MI
 code uses machine-specific macros.</p>
 
 <p>In addition to understanding RTL, you need to read the <a
-href="http://gcc.gnu.org/onlinedocs/gcc_20.html">machine description</a> and <a
-href="http://gcc.gnu.org/onlinedocs/gcc_21.html">target macros</a> sections of the GCC
+href="http://gcc.gnu.org/onlinedocs/gccint/Machine-Desc.html">machine description</a> and <a
+href="http://gcc.gnu.org/onlinedocs/gccint/Target-Macros.html">target macros</a> sections of the GCC
 manual.</p>
 
 <ul>
@@ -945,7 +946,7 @@ Mark old, deprecated features as such.</p></li>
 
 <p>We've got quite a bit of this but it is scattered all over the
 place.  It belongs in the official manual.  There is a <a
-href="http://gcc.gnu.org/onlinedocs/gcc_18.html">C/C++ specific manual</a>, and a
+href="http://gcc.gnu.org/onlinedocs/gccint/Trees.html">C/C++ specific manual</a>, and a
 <a href="http://www.ncsa.uiuc.edu/~wendling/tree.html">third party,
 general manual</a>.  Both of them are incomplete.  Several people have
 written partial manuals on implementing new front ends: look at <a
