Add entry for powerpc-ibm-aix4.3.2.0 for 3.0.2.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -23,7 +23,7 @@ archived mail messages that reported the builds.</p>
 <td>alpha-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00536.html">3.0.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00536.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00880.html">3.0.2</a>
 </td>
 </tr>
@@ -352,7 +352,8 @@ Unsuccessful:
 <td>powerpc-ibm-aix4.3.2.0</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00982.html">3.0.2</a></td>
 </tr>
 
 <tr>
