--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -307,6 +307,13 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>SuSE 7.0, glibc 2.1, kernel 2.5.0</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00993.html">3.0.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 7.2, glibc 2.2</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg01481.html">3.0.2</a></td>
