2001-12-19  Phil Edwards  <pme@gcc.gnu.org>
	* download.html:  Point to status page.
	* index.html:  Mention new snapshot.
	* status.html:  Update.
	* thanks.html:  Update.

--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -11,6 +11,10 @@
 
 <h3>Getting the sources by FTP or CVS</h3>
 
+<p>See <a href="status.html">the status page</a> first, so that you know
+which files are the correct snapshots to download.
+</p>
+
 <!-- The <URL:foo> syntax is the standard way of writing such things.  No
      link to the FTP site is given directly, encouraging mirror usage.
 -->
