--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -11,10 +11,9 @@
 
 <h2>What... is your name?</h2>
 
-<p>The GNU Standard C++ Library v3, or libstdc++-2.90.x/2.9x.  Also,
-   libstdc++-v3 is the most common nickname.  Since the release of GCC 3.0,
-   the library snapshots/tarballs/etc will have a major version number
-   of 3 rather than 2.
+<p>The GNU Standard C++ Library v3, or libstdc++-v3.  Older snapshots of
+   this library were given the name libstdc++-2.9x up until the release of
+   GCC 3.  This is a complete rewrite from the previous libstdc++-v2.
 </p>
 
 <h2>What... is your quest?</h2>
@@ -40,11 +39,13 @@
 <h3>News</h3>
 
 <dl>
+ <dt>2001-12-xx
+ <dd> Twelfth snapshot release, <a href="download.html">libstdc++-v3.0.95</a>.
  <dt>2001-06-18
  <dd> First major compiler release using libstdc++-v3 by default,
    <a href="http://gcc.gnu.org/gcc-3.0/">GCC 3.0</a>.
  <dt>2001-04-06
- <dd> Eleventh snapshot release, <a href="download.html">libstdc++-2.92.tar.gz</a>.
+ <dd> Eleventh snapshot release, libstdc++-2.92.tar.gz.
  <dt>2000-11-17
  <dd> Tenth snapshot release, libstdc++-2.91.tar.gz.
  <dt>2000-11-12
