--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -12,12 +12,33 @@
 <h3>Status</h3>
 
 <hr>
-<p><strong>If you have downloaded GCC 3.0, STOP.  You have the most
-   recent libstdc++-v3 code available.  All library snapshots are older
-   than the code contained in GCC 3.0.</strong>  We will continue to
-   roll library snapshots on a pseudo-independant basis (at least, that's
-   the plan).  Once we have released another snapshot, superceding the
-   version in GCC 3.0, this paragraph will be replaced with that information.
+<p>For release 3.0.95, two tarballs are available.  The first,
+   <a href="download.html">libstdc++-v3.0.95-gcc-3.1.x.tar.gz</a>, is for
+   use with current dvelopment GCC (and the 3.1 branch, a few months from
+   now).  The second,
+   <a href="download.html">libstdc++-v3.0.95-gcc-3.0.3.tar.gz</a>, is for
+   use with GCC 3.0.3+.  In either case, the build instructions (see the
+   README after downloading and unpacking) are unchanged.
+</p>
+
+<p>If you are using GCC 3.0.[012], then the libstdc++-v3 which ships with 
+   that compiler should be used.  It is stable and backwards-compatible.
+   With 3.0.3, you can use the stable (shipped) version, or you can download
+   the one above.
+</p>
+
+<p><strong>Attention!</strong> The library snapshot for GCC 3.0.3 above is
+   not the usual 3.0-branch library.  It is a modified version of the current
+   development library, slightly altered to work with the 3.0.3+ series of
+   compilers.  There are serious differences between the default 3.0.x
+   library, and the one above.  Lots of bugfixes, lots of improvements, but
+   many changes.
+</p>
+<p>If you are looking for a stable compiler along with a more cutting-edge
+   library, then the replacement library is for you.  If you value stability
+   more than radical bugfixes, then stick with the default 3.0.3 setup,
+   including its default libstdc++-v3.  If you want major changes everywhere,
+   then just use the CVS compiler.  :-)
 </p>
 <hr>
 
@@ -55,111 +76,15 @@
    HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/BUGS">bugs</a>.
 </p>
 
-<p>Things that need to be done and are looking for volunteers can be found
-   in: <a href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/TODO">pick me</a>.
+<p>Things that need to be done and are looking for volunteers can be found in:
+   <a href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/TODO">pick me</a>.
 </p>
 
-<p>This release has been tested with CVS gcc on the following
-   platforms.  The configuration of --enable-debug (using -O0) was tested.
-   Here are the results for snapshots 2.N:
-</p>
-
-<TABLE CELLSPACING=4 CELLPADDING=1>
-
-    <!-- Column titles -->
-    <TR>
-    <TH ALIGN=LEFT>N</TH>
-    <TH ALIGN=LEFT>host</TH>
-    <TH ALIGN=CENTER>build?</TH>
-    <TH ALIGN=CENTER>static pass/fail</TH>
-    <TH ALIGN=CENTER>shared pass/fail</TH>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>alpha-unknown-linux-gnu</TD>
-    <TD ALIGN=CENTER>+</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>i686-unknown-linux-gnu</TD>
-    <TD ALIGN=CENTER>+</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>powerpc-unknown-linux-gnu</TD>
-    <TD ALIGN=CENTER>+</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>sparc-sun-solaris2.5.1</TD>
-    <TD ALIGN=CENTER>+ (see Note 2)</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>sparc-sun-solaris2.6</TD>
-    <TD ALIGN=CENTER>+ (see Note 2)</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>sparc-sun-solaris2.7</TD>
-    <TD ALIGN=CENTER>+ (see Note 2)</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>sparc-sun-solaris2.8</TD>
-    <TD ALIGN=CENTER>+ (see Note 2)</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>powerpc-ibm-aix4.3</TD>
-    <TD ALIGN=CENTER>-</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>i686-cygwin</TD>
-    <TD ALIGN=CENTER>+</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    <TD ALIGN=CENTER>results_not_in</TD>
-    </TR>
-
-    <TR>
-    <TD ALIGN=LEFT>91</TD>
-    <TD ALIGN=LEFT>i686-linux-x-arm-elf</TD>
-    <TD ALIGN=CENTER>+</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    <TD ALIGN=CENTER>176/8</TD>
-    </TR>
-
-</TABLE>
-
-
-<p>Note 2: All Solaris toolchains were configured with --with-gnu-ld
---with-gnu-as --with-gcc. (That's a lot of --with's...)
+<p>Working platforms are listed
+   <a href="http://gcc.gnu.org/gcc-3.0/buildstat.html">here</a>, and test
+   results can be found
+   <a href="http://gcc.gnu.org/ml/gcc-testresults/">here</a> and
+   <a href="http://people.redhat.com/geoffk/gcc-regression/">here</a>.
 </p>
 
 
