Update feature list

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -163,6 +163,19 @@
     <li>Implemenation of function descriptors in C++ vtables for IA64.</li>
     <li>Numerous minor bug-fixes.</li>
   </ul></li>
+
+  <li>Additional changes in GCC 3.0.3
+  <ul> 
+    <li>A fix to correct an accidental change to the PowerPC ABI.</li>
+    <li>Fixes for bad code generation on a variety of architectures.</li>
+    <li>Improvements to the debugging information generated for C++ 
+        classes.</li>
+    <li>Fixes for bad code generation in C++.</li>
+    <li>A fix to avoid crashes in the C++ demangler.</li>
+    <li>A fix to the C++ standard library to avoid buffer overflows.</li>
+    <li>Miscellaneous improvements for a variety of architectures.</li>
+  </ul></li>
+
 </ul>
 
 </body>
