Update for GCC 3.0.3

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -138,7 +138,7 @@ GNU/Linux) and cross targets and use an extensive
 <a href="http://gcc.gnu.org/testresults/">test suite</a> as well as
 <a href="benchmarks/">various benchmark suites
 and automated testers</a> to maintain and improve quality.
-<a href="gcc-3.0/">GCC 3.0.2</a> is the current release.
+<a href="gcc-3.0/">GCC 3.0.3</a> is the current release.
 </p>
 
 <hr>
@@ -153,6 +153,11 @@ and automated testers</a> to maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>December 20, 2001</b></dt>
+<dd>
+GCC 3.0.3 has been released.
+</dd>
 
 <dt><b>November 3, 2001</b></dt>
 <dd>
