Add entry for sparc-sun-solaris2.8 for 3.0.2.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -426,7 +426,8 @@ Unsuccessful:
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00941.html">3.0</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01021.html">3.0.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01021.html">3.0.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01173.html">3.0.2</a></td>
 </tr>
 
 <tr>
