Add i686-pc-linux-gnu (Mandrake 8.0, glibc 2.2.2, kernel 2.4.3) for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -244,6 +244,13 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.0, glibc 2.2.2, kernel 2.4.3</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01175.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 8.1, glibc 2.2.4</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00843.html">3.0.2</a></td>
