--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -117,7 +117,9 @@ archived mail messages that reported the builds.</p>
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a>;
+Mostly successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01178.html">3.0.2</a></td>
 </tr>
 
 <tr>
