--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -179,6 +179,13 @@ Mostly successful:
 </tr>
 
 <tr>
+<td>i586-ncr-sysv4.3.03</td>
+<td>&nbsp;</td>
+<td>Successful (C):
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01181.html">3.0.2</a></td>
+</tr>
+
+<tr>
 <td>i586-pc-cygwin</td>
 <td>Cygwin 1.3.2, Win98</td>
 <td>Successful:
