* old-news.html (happening): Update Classpath link.

--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -209,7 +209,7 @@ here</A>.
 Today we merged some major work done at Red Hat.  This included:
 <ul>
 <li> Substantial work for the IA-64 port.
-<li> <code>java.beans</code> from <a href="http://www.classpath.org">Classpath</a>.
+<li> <code>java.beans</code> from <a href="http://www.gnu.org/software/classpath/">Classpath</a>.
 <li> A somewhat modified initial implementation of serialization.
      (This is known not to interoperate with other implementations yet.)
 <li> Miscellaneous bug fixes.
